// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ViralLoops /> counterWidget renders with a counter section 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ViralLoops
    counterWidget={true}
    publicToken="HaOj3wBPfSJhoWkoW2Ad_rmvPoM"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <UNDEFINED>
        
        
        <div
          data-test="ViralLoops_counterWidget"
          data-vl-widget="referralCountWidget"
        />
      </UNDEFINED>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          "",
          "",
          <div
            data-test="ViralLoops_counterWidget"
            data-vl-widget="referralCountWidget"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        "",
        "",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "data-test": "ViralLoops_counterWidget",
            "data-vl-widget": "referralCountWidget",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
      ],
      "type": Symbol(react.fragment),
    },
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <UNDEFINED>
          
          
          <div
            data-test="ViralLoops_counterWidget"
            data-vl-widget="referralCountWidget"
          />
        </UNDEFINED>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            "",
            "",
            <div
              data-test="ViralLoops_counterWidget"
              data-vl-widget="referralCountWidget"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          "",
          "",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "data-test": "ViralLoops_counterWidget",
              "data-vl-widget": "referralCountWidget",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
        ],
        "type": Symbol(react.fragment),
      },
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ViralLoops /> formWidget renders with a form section 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ViralLoops
    formWidget={true}
    publicToken="HaOj3wBPfSJhoWkoW2Ad_rmvPoM"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <UNDEFINED>
        <div
          data-test="ViralLoops_formWidget"
          data-vl-widget="embedForm"
        />
        
        
      </UNDEFINED>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <div
            data-test="ViralLoops_formWidget"
            data-vl-widget="embedForm"
          />,
          "",
          "",
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "data-test": "ViralLoops_formWidget",
            "data-vl-widget": "embedForm",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "",
        "",
      ],
      "type": Symbol(react.fragment),
    },
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <UNDEFINED>
          <div
            data-test="ViralLoops_formWidget"
            data-vl-widget="embedForm"
          />
          
          
        </UNDEFINED>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <div
              data-test="ViralLoops_formWidget"
              data-vl-widget="embedForm"
            />,
            "",
            "",
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "data-test": "ViralLoops_formWidget",
              "data-vl-widget": "embedForm",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "",
          "",
        ],
        "type": Symbol(react.fragment),
      },
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ViralLoops /> milestoneWidget renders with a rewards section 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ViralLoops
    milestoneWidget={true}
    publicToken="HaOj3wBPfSJhoWkoW2Ad_rmvPoM"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": <UNDEFINED>
        
        <div
          data-test="ViralLoops_milestoneWidget"
          data-vl-widget="milestoneWidget"
        />
        
      </UNDEFINED>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          "",
          <div
            data-test="ViralLoops_milestoneWidget"
            data-vl-widget="milestoneWidget"
          />,
          "",
        ],
      },
      "ref": null,
      "rendered": Array [
        "",
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "data-test": "ViralLoops_milestoneWidget",
            "data-vl-widget": "milestoneWidget",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "",
      ],
      "type": Symbol(react.fragment),
    },
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": <UNDEFINED>
          
          <div
            data-test="ViralLoops_milestoneWidget"
            data-vl-widget="milestoneWidget"
          />
          
        </UNDEFINED>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            "",
            <div
              data-test="ViralLoops_milestoneWidget"
              data-vl-widget="milestoneWidget"
            />,
            "",
          ],
        },
        "ref": null,
        "rendered": Array [
          "",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "data-test": "ViralLoops_milestoneWidget",
              "data-vl-widget": "milestoneWidget",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "",
        ],
        "type": Symbol(react.fragment),
      },
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
